force-app/main/default/objects/Event_Contributor__c/Event_Contributor__c.object-meta.xml
<CustomObject>
    <label>Event Contributor</label>
    <nameField>
        <label>Event Contributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>