force-app/main/default/objects/Event_Contributor__c/fields/Contribution_Points__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Points__c</fullName>
    <label>Contribution Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>